package com.tankgame.entities.collectible;

public class GrenadePowerUp extends PowerUp {
    public GrenadePowerUp(double x, double y) {
        super(x, y, "grenade_power_up", "GRENADE", "BOOM all the enemies", false);
    }

}
