package com.tankgame.entities.collectible;

public class HealthPack extends PowerUp {
    public HealthPack(double x, double y) {
        super(x, y, "healthpack", "HEALTH", "powerup_health", true);
    }

}
