package com.tankgame.entities.collectible;

public class HelmetPowerUp extends PowerUp {
    public HelmetPowerUp(double x, double y) {
        super(x, y, "helmet_power_up", "HELMET", "Makes you invulnerable", true);
    }

}
