package com.tankgame.entities.collectible;

public class ShovelPowerUp extends PowerUp {
    public ShovelPowerUp(double x, double y) {
        super(x, y, "shovel_power_up", "SHOVEL", "Protects your base with steel", false);
    }

}
