package com.tankgame.entities.collectible;

public class StarPowerUp extends PowerUp {
    public StarPowerUp(double x, double y) {
        super(x, y, "star_power_up", "STAR", "Decreases bullet cooldown", true);
    }


}
