package com.tankgame.entities.collectible;

public class TimeStopPowerUp extends PowerUp {
    public TimeStopPowerUp(double x, double y) {
        super(x, y, "timestop_power_up", "STOPWATCH", "ZA WARUDO!", false);
    }

}
